default-ingress/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: default
    networking.gke.io/v1beta1.FrontendConfig: default
spec:
  rules:
    - host: wallabag.app.a14n.net
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: wallabag
              port:
                number: 8080
